--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="OnLogin"
+        android:onClick="OnLogin (MainActivity)"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -58,6 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="27dp"
         android:layout_above="@+id/button"
+        android:onClick="onClick (SignInActivity)"
         android:layout_centerHorizontal="true" />
 
 
