--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -66,8 +66,8 @@
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_weight="60">
+                    android:layout_weight="60"
+                    android:layout_height="wrap_content">
 
                     <com.google.android.gms.common.SignInButton
                         android:id="@+id/sign_in_button"
