--- a/app/src/main/res/layout/activity_profile_setup.xml
+++ b/app/src/main/res/layout/activity_profile_setup.xml
@@ -16,7 +16,10 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:weightSum="100">
+        android:weightSum="100"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:orientation="vertical"
