--- a/app/src/main/res/layout/activity_select_user_type.xml
+++ b/app/src/main/res/layout/activity_select_user_type.xml
@@ -82,11 +82,11 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="50">
 
-                    <TextView
+                    <Button
                         android:text="Job Seeker"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/jobseeker_textview"
+                        android:id="@+id/btn_jobseeker"
                         android:layout_weight="1" />
                 </LinearLayout>
 
@@ -96,11 +96,11 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="50">
 
-                    <TextView
+                    <Button
                         android:text="Job Provider"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/jobprvoider_textview"
+                        android:id="@+id/btn_jobprovider"
                         android:layout_weight="1" />
                 </LinearLayout>
             </LinearLayout>
