--- a/app/src/main/res/layout/activity_navigation_jobseeker.xml
+++ b/app/src/main/res/layout/activity_navigation_jobseeker.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_navigation"
+    android:id="@+id/activity_navigation_jobprovider"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -9,7 +9,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background4"
-    tools:context="com.oreo.mcommonjobs.Activtity.NavigationActivity">
+    tools:context="com.oreo.mcommonjobs.Activtity.NavigationActivityForJobSeeker">
 
     <LinearLayout
         android:orientation="vertical"
@@ -84,7 +84,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Add Job"
+                        android:text="View Jobs"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_addjob" />
