OREO-45 #comment Replaced the remainder of current hard-coded text with string variables in string.xml and translated for french setting.

--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -97,7 +97,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Messages"
+                        android:text="@string/messages"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_messages" />
