full migration to volley complete

--- a/app/src/main/res/layout/activity_create_job_post_acitvity.xml
+++ b/app/src/main/res/layout/activity_create_job_post_acitvity.xml
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="10">
                     <Button
-                        android:text="CONTINUE >"
+                        android:text="ADDJOB >"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
