--- a/app/src/main/res/layout/activity_create_job_post_acitvity.xml
+++ b/app/src/main/res/layout/activity_create_job_post_acitvity.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background1"
-    tools:context="com.oreo.mcommonjobs.Activtity.CreateJobPostAcitvity">
+    tools:context="com.oreo.mcommonjobs.Activtity.CreateJobPostActivity">
 
     <LinearLayout
         android:orientation="vertical"
