--- a/app/src/main/res/layout/activity_twilio_authentication.xml
+++ b/app/src/main/res/layout/activity_twilio_authentication.xml
@@ -1,68 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.oreo.mcommonjobs.Activtity.TwilioAuthenticationActivity">
+    tools:context="com.oreo.mcommonjobs.Activtity.AuthenticationActivity">
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/editText_confirmation_number"
-        android:layout_below="@+id/textView2"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp" />
-
-    <TextView
-        android:text="Please enter the confirmation number"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView2"
-        android:layout_marginTop="66dp"
-        android:layout_below="@+id/button_sendConfirmationCode"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:text="Confirm Code"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/button_submit_confirmation"
-        android:layout_below="@+id/editText_confirmation_number"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="36dp" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Please enter your phone number"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:elevation="1dp"
+        android:orientation="vertical"
+        android:weightSum="100">
 
-    <EditText
-        android:id="@+id/editText_phoneNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText_confirmation_number"
-        android:layout_alignStart="@+id/editText_confirmation_number"
-        android:layout_below="@+id/textView"
-        android:layout_marginTop="31dp"
-        android:ems="10"
-        android:inputType="phone" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="20"
+            android:orientation="horizontal"
+            android:weightSum="100">
 
-    <Button
-        android:id="@+id/button_sendConfirmationCode"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/editText_phoneNumber"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp"
-        android:text="Send confirmation code" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="20"
+            android:orientation="vertical"
+            android:weightSum="100">
+
+            <TextView
+                android:id="@+id/enter_code_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="20"
+                android:fontFamily="Asap-Regular"
+                android:text="Enter Code"
+                android:textAlignment="center"
+                android:textColor="#06bebd"
+                android:textSize="44sp" />
+
+            <TextView
+                android:id="@+id/enter_code_description_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="60"
+                android:fontFamily="Asap-Regular"
+                android:text="Please check your text \n messages, we sent you a code!"
+                android:textAlignment="center"
+                android:textColor="#bfbfbf"
+                android:textSize="20sp"/>
+
+            <EditText
+                android:id="@+id/editText_phoneNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="20"
+                android:hint="phone number"
+                android:inputType="phone"
+                android:maxheight="10dp"
+                android:textAlignment="center"
+                android:textSize="20sp"></EditText>
+
+            <Button
+                android:id="@+id/button_sendConfirmationCode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/roundedbtn"
+                android:fontFamily="Asap-Regular"
+                android:text="Submit"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:orientation="vertical"
+            android:weightSum="100">
+
+            <EditText
+                android:id="@+id/editText_confirmation_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="30"
+                android:background="@color/common_action_bar_splitter"
+                android:hint="#####"
+                android:maxheight="10dp"
+                android:textAlignment="center"
+                android:textSize="20sp">
+
+            </EditText>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="20"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="100">
+
+            <Button
+                android:id="@+id/button_submit_confirmation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:background="@drawable/roundedbtn"
+                android:fontFamily="Asap-Regular"
+                android:text="Submit"
+                android:textColor="#ffffff"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="10"
+            android:orientation="horizontal"></LinearLayout>
+    </LinearLayout>
 </RelativeLayout>
