--- a/app/src/main/res/layout/jobfragment.xml
+++ b/app/src/main/res/layout/jobfragment.xml
@@ -4,6 +4,14 @@
     android:layout_height="match_parent"
     android:padding="10dp">
 
+    <View
+        android:id="@+id/top_line"
+        android:layout_width="fill_parent"
+        android:layout_alignTop="@+id/heading"
+        android:layout_marginBottom="54dp"
+        android:layout_height="2dp"
+        android:background="#c0c0c0" />
+
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +31,7 @@
         android:text="Description"
         android:lineSpacingExtra="-3dp"
         android:id="@+id/desc"
-        android:layout_alignBottom="@+id/leftIco"
+        android:layout_alignBottom="@+id/imageView"
         android:layout_alignLeft="@+id/heading"
         android:layout_alignStart="@+id/heading" />
 
@@ -31,7 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="Heading Text"
+        android:text="Job Title"
+        android:textColor="#06bebd"
         android:textStyle="bold"
         android:id="@+id/heading"
         android:scrollHorizontally="true"
@@ -43,4 +52,22 @@
         android:layout_toEndOf="@+id/leftIco"
         android:layout_marginLeft="24dp"
         android:layout_marginStart="24dp" />
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/arrowright"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/imageView" />
+
+
+    <View
+        android:id="@+id/bottom_line"
+        android:layout_width="fill_parent"
+        android:layout_below="@+id/desc"
+        android:layout_height="2dp"
+        android:background="#c0c0c0" />
+
 </RelativeLayout>
