made apply btn green and added action bar for back btn

--- a/app/src/main/res/layout/activity_job_info.xml
+++ b/app/src/main/res/layout/activity_job_info.xml
@@ -66,7 +66,7 @@
             android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/roundedbtn"
+            android:background="@drawable/btn_rounded_green_1"
             android:layout_weight="40"
             android:layout_margin="5dp"
             android:text="Apply" />
@@ -75,7 +75,7 @@
             android:id="@+id/btnShare"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/roundedbtn"
+            android:background="@drawable/btn_rounded_default"
             android:layout_margin="5dp"
             android:layout_weight="40"
             android:text="Share" />
