--- a/app/src/main/res/drawable/btn_rounded_default.xml
+++ b/app/src/main/res/drawable/btn_rounded_default.xml
@@ -9,4 +9,9 @@
     <size
         android:height="48dip"
         android:width="70dip" />
+    <item android:state_pressed="true"
+        android:color="#d8d4d4"/> <!-- pressed -->
+    <item android:state_focused="true"
+        android:color="#FFFFFF" /> <!-- focused -->
 </shape>
+
