--- a/app/src/main/res/layout/activity_job_info.xml
+++ b/app/src/main/res/layout/activity_job_info.xml
@@ -63,7 +63,7 @@
         android:weightSum="100">
 
         <Button
-            android:id="@+id/info"
+            android:id="@+id/btnApply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_rounded_green_1"
