OREO-48 #comment fixed master merging issue

--- a/app/src/main/res/layout/activity_create_job_post_acitvity.xml
+++ b/app/src/main/res/layout/activity_create_job_post_acitvity.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@drawable/background1"
-    tools:context="com.oreo.mcommonjobs.Activtity.CreateJobPostAcitvity">
+    tools:context="com.oreo.mcommonjobs.Activtity.CreateJobPostActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -41,7 +41,7 @@
                 android:weightSum="100">
 
                 <TextView
-                    android:text="CREATE POSTING"
+                    android:text="@string/create_posting"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:id="@+id/page_title_profile_info"
@@ -126,7 +126,7 @@
                             android:layout_height="match_parent"
                             android:inputType="textMultiLine"
                             android:id="@+id/editText"
-                            android:hint="Add description here." />
+                            android:hint="@string/job_desc_hint" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -137,7 +137,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="10">
                     <Button
-                        android:text="CONTINUE >"
+                        android:text="@string/continue_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textSize="20sp"
