--- a/app/src/main/res/layout/activity_navigation_jobprovider.xml
+++ b/app/src/main/res/layout/activity_navigation_jobprovider.xml
@@ -49,7 +49,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Search"
+                        android:text="@string/main_menu_search"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_search"
@@ -63,7 +63,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Profile"
+                        android:text="@string/main_menu_profile_title"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_profile" />
@@ -84,7 +84,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Add Job"
+                        android:text="@string/main_menu_add_job"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_addjob" />
@@ -97,7 +97,7 @@
                     android:layout_weight="50">
 
                     <Button
-                        android:text="Messages"
+                        android:text="@string/messages"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:id="@+id/btn_messages" />
