--- a/app/src/main/res/layout/jobfragment.xml
+++ b/app/src/main/res/layout/jobfragment.xml
@@ -1,73 +1,79 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:padding="10dp">
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:padding="5dp"
+        android:src="@drawable/arrowright"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/bottom_line"
+        android:layout_alignEnd="@+id/bottom_line" />
 
     <View
         android:id="@+id/top_line"
         android:layout_width="fill_parent"
-        android:layout_alignTop="@+id/heading"
-        android:layout_marginBottom="54dp"
         android:layout_height="2dp"
-        android:background="#c0c0c0" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/leftIco"
-        android:src="@mipmap/ic_launcher"
-        android:maxHeight="70dp"
-        android:maxWidth="70dp"
-        android:adjustViewBounds="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
+        android:layout_alignTop="@+id/heading"
+        android:layout_weight="1"
+        android:background="#c0c0c0"
+        android:padding="10dp" />
 
     <TextView
+        android:id="@+id/desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Description"
-        android:lineSpacingExtra="-3dp"
-        android:id="@+id/desc"
         android:layout_alignBottom="@+id/imageView"
         android:layout_alignLeft="@+id/heading"
-        android:layout_alignStart="@+id/heading" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:text="Job Title"
-        android:textColor="#06bebd"
-        android:textStyle="bold"
-        android:id="@+id/heading"
-        android:scrollHorizontally="true"
-        android:maxLines="1"
-        android:layout_marginBottom="15dp"
-        android:ellipsize="end"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/leftIco"
-        android:layout_toEndOf="@+id/leftIco"
-        android:layout_marginLeft="24dp"
-        android:layout_marginStart="24dp" />
-
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/arrowright"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:id="@+id/imageView" />
-
+        android:layout_alignStart="@+id/heading"
+        android:layout_weight="1"
+        android:lineSpacingExtra="-3dp"
+        android:text="Description" />
 
     <View
         android:id="@+id/bottom_line"
         android:layout_width="fill_parent"
-        android:layout_below="@+id/desc"
         android:layout_height="2dp"
-        android:background="#c0c0c0" />
+        android:layout_below="@+id/desc"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:background="#c0c0c0"
+        android:padding="10dp" />
+
+    <TextView
+        android:id="@+id/heading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/desc"
+        android:layout_marginLeft="13dp"
+        android:layout_toEndOf="@+id/leftIco"
+        android:layout_toRightOf="@+id/leftIco"
+        android:layout_weight="1"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:scrollHorizontally="true"
+        android:text="Job Title"
+        android:textColor="#06bebd"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/leftIco"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/bottom_line"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_weight="1"
+        android:adjustViewBounds="true"
+        android:maxHeight="70dp"
+        android:maxWidth="70dp"
+        android:src="@mipmap/ic_launcher" />
+
 
 </RelativeLayout>
